alterações no processador de anotações porque um bug impede a execução do lombok e do nosso processador customizado com construtores customizados de records